<resources>
    <string name="app_name">AppGesuas</string>
    <string name="text_perfil">Perfil</string>
    <string name="text_initiation">Início</string>
    <string name="text_menu">Menu</string>
    <string name="text_register">Cadastrar</string>
    <string name="text_name">Nome completo</string>
    <string name="text_ex">Ex. Maria da Silva</string>
    <string name="text_cpf">CPF</string>
    <string name="mask_cpf">000.000.000-00</string>
    <string name="mask_birth_date">00/00/0000</string>
    <string name="text_birth_date">Data de nascimento</string>
    <string name="text_cell_phone">Telefone celular</string>
    <string name="mask_cell_phone">(99) 99999-9999</string>
    <string name="text_select_service">Selecione o serviço</string>
    <string name="text_forwarding">Encaminhamento</string>
    <string name="text_follow_up">Acompanhamento</string>
    <string name="text_social_approach">Abordagem social</string>
    <string name="tv_welcome">Acolhimento</string>
    <string name="text_scfv">SCFV</string>
    <string name="text_continue">Continuar</string>
    <string name="exemple_name">Antonio da Silva Figueiredo</string>
    <string name="text_show_cpf">CPF:</string>
    <string name="text_show_date_birth">Data de nascimento:</string>
    <string name="text_exemple_show_birth_date">01/01/1950</string>
    <string name="text_show_age">Idade: </string>
    <string name="text_forward_to">Encaminhar para</string>
    <string name="text_motive">Motivo</string>
    <string name="text_forward">Encaminhar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_exemple_show_age">62 anos</string>
</resources>