<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <include
        android:id="@+id/include_top_bar"
        layout="@layout/menu_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/exemple_name"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_top_bar" />

    <TextView
        android:id="@+id/tv_show_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/text_show_cpf"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_show_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_name" />

    <TextView
        android:id="@+id/tv_show_exemple_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/mask_cpf"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_show_cpf"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_name" />

    <TextView
        android:id="@+id/tv_show_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/text_show_date_birth"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_show_cpf"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_cpf" />

    <TextView
        android:id="@+id/tv_exemple_show_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/text_exemple_show_birth_date"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_show_birth_date"
        app:layout_constraintStart_toEndOf="@+id/tv_show_birth_date"
        app:layout_constraintTop_toTopOf="@id/tv_show_birth_date" />

    <TextView
        android:id="@+id/tv_show_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/text_show_age"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_exemple_show_birth_date"
        app:layout_constraintTop_toTopOf="@+id/tv_exemple_show_birth_date" />

    <TextView
        android:id="@+id/tv_show_exemple_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/text_exemple_show_age"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_show_age"
        app:layout_constraintStart_toEndOf="@+id/tv_show_age"
        app:layout_constraintTop_toTopOf="@+id/tv_show_age" />

    <Button
        android:id="@+id/btn_forward_to"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:drawableEnd="@drawable/ic_vector"
        android:paddingLeft="32dp"
        android:text="@string/text_forward_to"
        android:textAlignment="textStart"
        android:textColor="@color/text_edit_text"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_exemple_age" />

    <Button
        android:id="@+id/btn_motive"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_vector"
        android:paddingLeft="32dp"
        android:text="@string/text_motive"
        android:textAlignment="textStart"
        android:textColor="@color/text_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forward_to" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/bg_btn_cancel"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/text_cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_edit_text"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_motive" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_btn_main"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/text_forward"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/bg_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    <include
        android:id="@+id/include_botton_bar"
        layout="@layout/menu_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>