<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_color_blue"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:background="@color/bg_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_round_menu_white"
                app:layout_constraintEnd_toEndOf="@+id/iv_color_blue"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                android:background="@color/bg_blue"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:text="@string/text_register"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_color_blue" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/bg_blue"
                android:fontFamily="@font/ubuntu"
                android:gravity="bottom"
                android:hint="@string/text_ex"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/text_name"
                android:textColor="@color/text_edit_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintTop_toTopOf="@+id/et_name" />

            <EditText
                android:id="@+id/et_cpf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/bg_blue"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="bottom"
                android:hint="@string/mask_cpf"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/text_cpf"
                android:textColor="@color/text_edit_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/et_cpf"
                app:layout_constraintTop_toTopOf="@+id/et_cpf" />

            <EditText
                android:id="@+id/et_birth_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/bg_blue"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="bottom"
                android:hint="@string/mask_birth_date"
                android:inputType="date"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cpf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/text_birth_date"
                android:textColor="@color/text_edit_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/et_cpf"
                app:layout_constraintTop_toTopOf="@+id/et_birth_date" />

            <EditText
                android:id="@+id/et_cell_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/bg_blue"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="bottom"
                android:hint="@string/mask_cell_phone"
                android:inputType="phone"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_birth_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/text_cell_phone"
                android:textColor="@color/text_edit_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/et_cpf"
                app:layout_constraintTop_toTopOf="@+id/et_cell_phone" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="250dp"
                android:layout_height="56dp"
                android:layout_marginTop="93dp"
                android:background="@drawable/bg_btn_main"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/text_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/bg_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cell_phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/include_botton_bar"
        layout="@layout/menu_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>