<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SelectServiceActivity">

    <include
        android:id="@+id/include_top_bar"
        layout="@layout/menu_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_select_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/text_select_service"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_top_bar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_service">

        <RadioButton
            android:id="@+id/rb_forwarding"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_radio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rb_follow_up"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_radio"
            android:buttonTint="#0D47A1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_forwarding" />

        <RadioButton
            android:id="@+id/rb_social_approach"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_radio"
            android:buttonTint="#0D47A1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_follow_up" />

        <RadioButton
            android:id="@+id/rb_welcome"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_radio"
            android:buttonTint="#0D47A1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_social_approach" />

        <RadioButton
            android:id="@+id/rb_scfv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:button="@android:color/transparent"
            android:background="@drawable/bg_radio"
            android:buttonTint="#0D47A1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_welcome" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_forwarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/text_forwarding"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/tv_select_service"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_follow_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/text_follow_up"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/tv_forwarding"
        app:layout_constraintTop_toBottomOf="@+id/tv_forwarding" />

    <TextView
        android:id="@+id/tv_social_approach"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:button="@android:color/transparent"
        android:text="@string/text_social_approach"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/tv_follow_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_follow_up" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/tv_welcome"
        app:layout_constraintEnd_toEndOf="@+id/tv_social_approach"
        app:layout_constraintStart_toStartOf="@+id/tv_social_approach"
        app:layout_constraintTop_toBottomOf="@+id/tv_social_approach" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_scfv"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <Button
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="177dp"
        android:background="@drawable/bg_btn_main"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/bg_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <include
        android:id="@+id/include_botton_bar"
        layout="@layout/menu_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>