<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_bottom_bar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@android:color/white"
        android:paddingHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_perfil"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/"
            android:text="@string/text_perfil"
            android:textColor="@color/text_gray"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/ib_perfil"
            app:layout_constraintStart_toStartOf="@+id/ib_perfil"
            app:layout_constraintTop_toBottomOf="@+id/ib_perfil" />

        <ImageButton
            android:id="@+id/ib_home"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_menu"
            app:layout_constraintStart_toEndOf="@+id/ib_perfil" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/text_initiation"
            android:textColor="@color/text_gray"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/ib_home"
            app:layout_constraintStart_toStartOf="@+id/ib_home"
            app:layout_constraintTop_toBottomOf="@+id/ib_home" />

        <ImageButton
            android:id="@+id/ib_menu"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/ic_round_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/text_menu"
            android:textColor="@color/text_gray"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/ib_menu"
            app:layout_constraintStart_toStartOf="@+id/ib_menu"
            app:layout_constraintTop_toBottomOf="@+id/ib_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>